--- a/app/src/main/res/layout/fragment_circle.xml
+++ b/app/src/main/res/layout/fragment_circle.xml
@@ -4,7 +4,7 @@
               android:layout_height="match_parent"
               >
 
-    <com.ryan.customview.view.CircleView
+    <com.ryan.customview.view.FakeSearchView
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
