--- a/app/src/main/res/layout/fragment_radar.xml
+++ b/app/src/main/res/layout/fragment_radar.xml
@@ -4,7 +4,7 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <com.ryan.customview.view.Bezier
+    <com.ryan.customview.view.SearchView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
