--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -4,7 +4,7 @@
                 android:layout_height="match_parent">
 
     <com.ryan.customview.view.TestView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="200dp"
+        android:layout_height="200dp"/>
 
 </RelativeLayout>
