--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -3,9 +3,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <com.ryan.customview.view.TestView
+    <com.ryan.customview.view.RadialGradientView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <com.ryan.customview.view.RippleView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
 
 
 </RelativeLayout>
