--- a/app/src/main/res/layout/activity_anim.xml
+++ b/app/src/main/res/layout/activity_anim.xml
@@ -45,10 +45,10 @@
 
     </LinearLayout>
 
-    <com.ryan.customview.view.TestView
-        android:id="@+id/testView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+    <com.ryan.customview.view.CollapseView
+        android:id="@+id/collapse_view"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
