--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <com.ryan.customview.view.TestView
-        android:id="@+id/testView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <com.ryan.customview.progressbar.CircleProgressbar
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        app:cpb_foregroundProgressColor="#1864c2"
+        app:cpb_foregroundProgressWidth="15"
+        app:cpb_progress="50"
+        app:cpb_roundedCorner="true"
+        app:cpb_touchEnabled="true"/>
 
 </RelativeLayout>
